# VerityDocs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build-prompts.py  pyproject.toml
.github/actions/veritydocs/: README.md  action.yml
.github/workflows/: veritydocs-check.yml
docs/: README.md  traceability.md
docs/PRD/: 00-visao-escopo.md  _index.md
docs/SPEC/: 00-visao-arquitetura.md  _index.md
docs/audit/: README.md  decisions-log.md  step0-module-mapping.json
docs/audit/templates/: consolidated-audit.template.json  traceability-stub.template.md  traceability.template.csv
docs/changes/: README.md
docs/flows/: _index.md
prompts/: skill-req-intake.prompt.md
skills/skill-audit-module/: SKILL.md
skills/skill-change-archive/: SKILL.md
skills/skill-change-propose/: SKILL.md
skills/skill-diagram-flow/: SKILL.md
skills/skill-req-change/: SKILL.md
skills/skill-req-intake/: SKILL.md
src/veritydocs/: cli.py  cli_status.py  config.py  skill_evolution.py  workflows_spec.py
src/veritydocs/audit/: auditor.py  consolidator.py  global_steps.py  module_map.py  reporters.py  schemas.py
src/veritydocs/change_manager/: __init__.py  manager.py  models.py
src/veritydocs/check/: consistency.py
src/veritydocs/flows/: __init__.py  diagrams.py  engine.py  extract.py
src/veritydocs/i18n/: __init__.py  catalog.py  filenames.py
src/veritydocs/intake/: classifier.py  draft.py  interview.py  similarity.py
src/veritydocs/scaffold/: generator.py  tool_selector.py
src/veritydocs/toolgen/: __init__.py  adapters.py  artifact_metadata.py  canonical_render.py  context.py  generator.py  (+1 more)
tests/: conftest.py  test_audit.py  test_change_manager.py  test_check.py  test_cli.py  test_cli_status.py  test_config_load.py  test_flows.py  test_i18n.py  test_intake.py  test_scaffold.py  test_skill_evolution.py  test_tool_selector.py  test_toolgen.py  test_toolgen_canonical.py  test_traceability.py  test_workflows_spec.py
(+59 files in other folders)
